tests/errors/2009-3.vb
'#compiler-options:/optionstrict+:custom
'#compiler-message:Command line error BC2009 : option 'optionstrict' can be followed only by '+' or '-'
'#exit-code:1